--- a/README
+++ b/README
@@ -1,3 +1,3 @@
-Sorting algorithm writing by Python
-使用python实现的排序算法（冒泡，选择，插入，shell，快速，堆，合并）
-参考java版源代码
+Sorting algorithm writing by Python&Java
+实现的排序算法（冒泡，选择，插入，shell，快速，堆，合并）
+
